# LastRedux

./: .clang-format  .gitignore  ApplicationViewModel.py  Button.py  CMakeLists.txt  DetailsViewModel.py  FontLoaders.qml  FriendsListModel.py  FriendsViewModel.py  HistoryListModel.py  HistoryViewModel.py  LastFmApiWrapper.py  LastFmWrapper.py  OnboardingViewModel.py  PlatformIntegrations.py  ProfileViewModel.py  README.md  ScrobbleDetailsViewModel.py  ScrobbleHistoryListModel.py  ScrobbleHistoryViewModel.py  app.py  app.spec  art_provider_test.py  basic_app.py  build.sh  db_template.sqlite  lastfm_api_test.py  lastfm_auth_test.py  main.cpp  main.qml  models.py  requirements.txt
cmake/: deploy.sh  qml.qrc.in  res.qrc.in
datatypes/: Album.py  AppleScriptState.py  Artist.py  CachedResource.py  CurrentScrobble.py  Friend.py  FriendScrobble.py  FriendTrack.py  ImageSet.py  ListeningStatistic.py  MediaPlayerState.py  NotificationState.py  OldAlbum.py  ProfileStatistic.py  ProfileStatistics.py  Scrobble.py  SimilarArtist.py  SimpleTrack.py  SpotifyArtist.py  Tag.py  Track.py  TrackCrop.py  __init__.py
datatypes/lastfm/: LastfmAlbum.py  LastfmAlbumInfo.py  LastfmArtist.py  LastfmArtistInfo.py  LastfmArtists.py  (+24 more)
mock_data/: mock_tracks.json
models/: Scrobble.py
platform_integrations/: Hotkey.py  MacNotificationObserver.py  NativeShortcut.py  WindowStyle.py
plugins/: AppleMusicPlugin.py  MediaPlayerPlugin.py  MediaPlayerPluginTemplate.py  MockPlayerPlugin.py  MusicAppPlugin.py  SpotifyPlugin.py
src/: LRViewModel.cpp  LRViewModel.h  main.cpp
tasks/: FetchAppleMusicPlaybackPosition.py  FetchAppleMusicPlayerPosition.py  FetchAppleMusicTrackCrop.py  FetchFriendPlaysLeaderboard.py  FetchFriendScrobble.py  FetchFriendScrobbleArt.py  FetchFriendTrack.py  FetchFriendTrackImage.py  FetchFriends.py  FetchFriendsTask.py  FetchNewMediaPlayerStateTask.py  FetchOverallStatsAndTopArtists.py  FetchPlayerPosition.py  FetchProfileAndTopArtistsTask.py  FetchProfileStatistics.py  FetchRecentScrobbles.py  FetchRecentScrobblesTask.py  FetchTopAlbumsTask.py  FetchTopTracksTask.py  FetchUserAndArtistStatisticsTask.py  LoadAdditionalFriendTrackDataTask.py  LoadAdditionalScrobbleDataTask.py  LoadExternalScrobbleData.py  LoadFriendsTracks.py  LoadLastfmAlbumInfo.py  LoadLastfmArtistInfo.py  LoadLastfmTrackInfo.py  LoadProfileSpotifyArtists.py  LoadTrackImages.py  SetAdditionalScrobbleDataTask.py  SubmitScrobble.py  SubmitScrobbleTask.py  SubmitTrackIsLovedChanged.py  UpdateNowPlaying.py  UpdateNowPlayingTask.py  UpdateTrackLoveOnLastfm.py  __init__.py
tests/: art_provider_test.py  lastfm_api_test.py
tools/: minify.c
util/: AlbumArtProvider.py  DatabaseHelper.py  HTTPRequest.py  LastFmApiWrapper.py  LastfmApiWrapper.py  NewLastfmApiWrapper.py  OldLastfmApiWrapper.py  SpotifyWebApiHelper.py  db_helper.py  helpers.js  helpers.py  iTunesApiHelper.py  iTunesStoreRequest.py  itunes_api_helper.py  itunes_store_api_helper.py  new_db_helper.py  spotify_api_helper.py
views/: Details.qml  Friends.qml  History.qml  Onboarding.qml  Profile.qml  ScrobbleDetails.qml  ScrobbleHistory.qml  Scrobbles.qml
workers/: ApiRequestWorker.py  MediaPlayerWorker.py
(+123 files in other folders)
